Bug 304940 - kmail should warn when replying to an encrypted mail unencrypted
Summary: kmail should warn when replying to an encrypted mail unencrypted
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: crypto (other bugs)
Version First Reported In: 4.8.4
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 275733 290545 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-08-10 19:02 UTC by Maximilian Engelhardt
Modified: 2013-03-26 23:30 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maximilian Engelhardt 2012-08-10 19:02:46 UTC
When receiving an encrypted mail and hitting the replay button on it, kmail does quote the message text, but does not activate encyrption or warn that the message will be transmitted unencrypted. The my result in private information being sent in non-enrypted form.

Reproducible: Always

Steps to Reproduce:
1. receive an enrypted mail
2. hit the reply button
3. hit the send button
Actual Results:  
Kmail sends the quote of the original mail unencrypted.

Expected Results:  
Kmail should send my reply mail encrypted and warn me if that is not possible or if I try to disable encryption.

You can switch encyption on manually if you notice this problem befor sending the mail and everything is fine, but this can be easily overlooked.
Comment 1 Laurent Montel 2012-09-05 11:06:19 UTC
Git commit e4564c4266078eda3ef8d987f33e194665455720 by Montel Laurent.
Committed on 05/09/2012 at 13:05.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug 304940 - kmail should warn when replying to an encrypted mail

unencrypted
FIXED-IN: 4.9.2

M  +2    -2    kmail/composer.h
M  +38   -11   kmail/kmcommands.cpp
M  +11   -8    kmail/kmcomposewin.cpp
M  +4    -4    kmail/kmcomposewin.h
M  +6    -6    kmail/kmkernel.cpp
M  +2    -2    kmail/kmmainwidget.cpp
M  +1    -1    kmail/mailserviceimpl.cpp
M  +7    -2    kmail/util.cpp
M  +1    -1    kmail/util.h

http://commits.kde.org/kdepim/e4564c4266078eda3ef8d987f33e194665455720
Comment 2 Sandro Knauß 2013-03-26 23:29:10 UTC
*** Bug 275733 has been marked as a duplicate of this bug. ***
Comment 3 Sandro Knauß 2013-03-26 23:30:31 UTC
*** Bug 290545 has been marked as a duplicate of this bug. ***