Fix Bug 304940 - kmail should warn when replying to an encrypted mail

unencrypted
FIXED-IN: 4.9.2
BUG: 304940